# target-pinecone

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/workflows/: release_workflow.yml  test.yml
target_pinecone/: __init__.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
tests/target_test_streams/: test_stream.singer
